crates/math-core/tests/snapshots/conversion_test__text_nested_it_some_braces.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{ {\\textit a b}c}"
---
<math>
    <mrow>
        <mtext> </mtext>
        <mtext><i>a</i></mtext>
        <mtext> bc</mtext>
    </mrow>
</math>
