crates/math-core/tests/snapshots/conversion_test__text_nested_space.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{{\\textit \\; b}c}"
---
<math>
    <mrow>
        <mtext><i> </i></mtext>
        <mtext>bc</mtext>
    </mrow>
</math>
