crates/math-core/tests/snapshots/conversion_test__text_only_symbol_commands.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{\\textasciicircum\\textbar\\textbardbl\\textbraceleft\\textbraceright\\textdagger\\textdaggerdbl\\textdegree\\textdollar\\textellipsis\\textemdash\\textendash\\textquotedblleft\\textquotedblright\\textquoteleft\\textquoteright\\textregistered\\textsterling\\textunderscore\\textgreater\\textless}"
---
<math>
    <mtext>ˆ|‖{}†‡°$…—–“”‘’®£_&gt;&lt;</mtext>
</math>
