crates/math-core/tests/snapshots/conversion_test__text_rq.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{\\rq}"
---
<math>
    <mtext>’</mtext>
</math>
