crates/math-core/tests/snapshots/conversion_test__text_size_as_style_argument.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{a\\textit\\large b}"
---
<math>
    <mrow>
        <mtext>a</mtext>
        <mtext>b</mtext>
    </mrow>
</math>
