crates/math-core/tests/snapshots/conversion_test__text_size_group_close_multiple.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\text{{\\large x \\huge y} z}"
---
<math>
    <mrow>
        <mtext style="font-size:120%">x </mtext>
        <mtext style="font-size:200%">y</mtext>
        <mtext> z</mtext>
    </mrow>
</math>
